elastic.yaml
apiVersion: v1
kind: Service
metadata:
  name: prod-es-http
spec:
  selector:
    elasticsearch.k8s.elastic.co/cluster-name: prod-es
  ports:
    - protocol: TCP
      port: 9200
      targetPort: 9200
  type: ClusterIP
