kibana.yaml
apiVersion: v1
kind: Service
metadata:
  name: prod-kb-svc
spec:
  selector:
    kibana.k8s.elastic.co/name: prod-kb
  ports:
    - protocol: TCP
      port: 5601
      targetPort: 5601
  type: ClusterIP
