kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
    - host: kibana.pkdemo.org  # Replace with your actual domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prod-kb-svc
                port:
                  number: 5601
  tls:
    - hosts:
        - kibana.pkdemo.org
      secretName: kibana-tls-cert  # Cert Manager will create this
